Align items and flex-wrap

--- a/Notes/flex.html
+++ b/Notes/flex.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <h2>Flex Basics Playground</h2>
+    <h1>Flex Basics Playground</h1>
 
     <div class="container">
-        <div class="item1"></div>
-        <div class="item2"></div>
-        <div class="item3"></div>
-        <div class="item4"></div>
+        <div style="background-color: aqua; height: 50px;">H</div>
+        <div style="background-color: bisque; ">E</div>
+        <div style="background-color: blueviolet;">L</div>
+        <div style="background-color: coral; height: 150px;">L</div>
+        <div style="background-color: darkcyan;">O</div>
     </div>
 
 </body>
