--- a/Notes/flex.html
+++ b/Notes/flex.html
@@ -12,10 +12,10 @@
     <h1>Flex Basics Playground</h1>
 
     <div class="container">
-        <div style="background-color: aqua; height: 50px;">H</div>
+        <div style="background-color: aqua;">H</div>
         <div style="background-color: bisque; ">E</div>
         <div style="background-color: blueviolet;">L</div>
-        <div style="background-color: coral; height: 150px;">L</div>
+        <div style="background-color: coral;">L</div>
         <div style="background-color: darkcyan;">O</div>
     </div>
 
